@startuml class_sprint3
skinparam classAttributeIconSize 0
skinparam classBorderColor #2C3E50
skinparam classBackgroundColor #ECF0F1
skinparam classArrowColor #2C3E50
skinparam noteBorderColor #F39C12
skinparam noteBackgroundColor #FDEBD0
skinparam packageBorderColor #7F8C8D
skinparam packageBackgroundColor #FDFEFE

title Diagramme de classes — Sprint 3

' ========================
' DATA MODELS
' ========================

package "Modèles de données" {

    ' ── Authentification ──
    class User {
        +id : int
        +email : String
        +hashed_password : String
        +full_name : String
        +role : String
        +is_active : boolean
        +created_at : DateTime
        +last_login : DateTime
        +register()
        +login()
        +updateProfile()
        +getToken()
    }

    class UserProfile {
        +id : int
        +user_id : int
        +daily_focus_goal : int
        +preferred_schedule : String
        +avatar_data_url : String
        +notif_enabled : boolean
        +notif_preferences : JSON
        +updated_at : DateTime
        +updateGoals()
        +getPreferences()
    }

    ' ── Vision / Monitoring CV ──
    class WorkSession {
        +id : String
        +user_id : int
        +start_time : DateTime
        +end_time : DateTime
        +is_active : boolean
        +metadata_json : JSON
        +create()
        +finalize()
        +claimUser()
    }

    class Snapshot {
        +id : int
        +session_id : String
        +timestamp : DateTime
        +work_mode : String
        +attention_score : float
        +posture_score : float
        +vigilance_score : float
        +stress_risk_score : float
        +global_focus_score : float
        +raw_payload_json : JSON
        +ingest()
    }

    class FocusEvent {
        +id : int
        +session_id : String
        +timestamp : DateTime
        +event_type : String
        +level : String
        +description : String
        +raw_payload_json : JSON
        +ingest()
    }

    ' ── Planning Intelligent ──
    class StudySession {
        +id : int
        +user_id : int
        +date : Date
        +start : DateTime
        +end : DateTime
        +subject : String
        +priority : String
        +status : String
        +notes : String
        +is_ai_generated : boolean
        +document_id : int
        +completed_at : DateTime
        +created_at : DateTime
        +updated_at : DateTime
        +getByDate(userId, date) : List~StudySession~
        +generatePlanning(date, documentId?, examIds?)
        +generateWeekPlanning(date, documentId?, examIds?)
        +recalculateRevisionSlots(userId, date)
        +getInsights(period) : PlanningInsights
        +create(subject, start, end, priority)
        +update(id, subject?, start?, end?, priority?, notes?)
        +complete(id)
        +delete(id)
        +reschedule(id)
        +getDocumentIds() : List~int~
        +getDocumentNames() : List~str~
        +getQuizStatus() : str
        +getFlashcardsStatus() : str
    }

    class Exam {
        +id : int
        +user_id : int
        +document_id : int
        +title : String
        +exam_date : Date
        +created_at : DateTime
        +updated_at : DateTime
        +create()
        +update()
        +delete()
    }

    ' ── Chatbot RAG ──
    class ChatDocument {
        +id : int
        +user_id : int
        +filename : String
        +file_path : String
        +chroma_collection : String
        +page_count : int
        +created_at : DateTime
        +upload()
        +parse()
        +delete()
    }

    class ChatMessage {
        +id : int
        +user_id : int
        +document_id : int
        +question : String
        +answer : String
        +sources : JSON
        +created_at : DateTime
        +send()
        +generateResponse()
    }

    class Quiz {
        +id : int
        +user_id : int
        +document_id : int
        +session_id : int
        +title : String
        +num_questions : int
        +score : int
        +completed_at : DateTime
        +created_at : DateTime
        +generate()
        +submit()
        +evaluate()
    }

    class QuizQuestion {
        +id : int
        +quiz_id : int
        +question_text : String
        +options : JSON
        +correct_index : int
        +explanation : String
        +user_answer_index : int
    }

    class Flashcard {
        +id : int
        +user_id : int
        +document_id : int
        +source_session_id : int
        +front : String
        +back : String
        +ease_factor : float
        +interval : int
        +repetitions : int
        +next_review : DateTime
        +created_at : DateTime
        +generate()
        +review()
        +updateSM2()
    }

    ' ── Sommeil & Réveil ──
    class SleepRecord {
        +id : int
        +user_id : int
        +sleep_start : DateTime
        +sleep_end : DateTime
        +total_hours : float
        +deep_sleep_hours : float
        +light_sleep_hours : float
        +sleep_score : int
        +raw_sensor_data : JSON
        +created_at : DateTime
        +record()
        +calculateScore()
    }

    class SmartAlarm {
        +id : int
        +user_id : int
        +alarm_time : String
        +is_active : boolean
        +wake_mode : String
        +light_intensity : int
        +sound_enabled : boolean
        +configure()
        +trigger()
        +snooze()
    }
}

' ========================
' RELATIONS
' ========================

User "1" --> "1" UserProfile       : possède >
User "1" --> "*" WorkSession       : démarre >
User "1" --> "*" StudySession      : planifie >
User "1" --> "*" Exam              : définit >
User "1" --> "*" ChatDocument      : uploade >
User "1" --> "*" ChatMessage       : envoie >
User "1" --> "*" Quiz              : génère >
User "1" --> "*" Flashcard         : révise >
User "1" --> "*" SleepRecord       : enregistre >
User "1" --> "0..1" SmartAlarm     : configure >

WorkSession "1" --> "*" Snapshot   : contient >
WorkSession "1" --> "*" FocusEvent : génère >

StudySession "*" --> "*" ChatDocument   : étudie >
StudySession "1" --> "0..1" Quiz        : génère >
StudySession "1" --> "*" Flashcard      : génère >

Exam "*" --> "0..1" ChatDocument        : concerne >

ChatDocument "1" --> "*" ChatMessage    : contexte pour >
ChatDocument "1" --> "*" Flashcard      : produit >

Quiz "1" *-- "1..*" QuizQuestion        : composé de >
Quiz "*" --> "*" ChatDocument           : générés depuis >

@enduml
